# Keyboard-Mouse-Multicast-Remote

./: .gitignore  .gitmodules  CMakeList.txt  CMakeLists.txt  CMakePresets.json  README.md  build.bat  createObject.bat  debug_build.cmake  main_client.cpp  main_server.cpp  main_test.cpp  makefile  mapping.xlsx  note.md  quickCompile.bat  test.cpp  todo.md
docs/: mapping.xlsx
example/cgo_compatible_extern/: CMakeLists.txt  README  extern.cpp
example/simple/: CMakeLists.txt  main_client.cpp  main_server.cpp
include/: mouse.h
include/mmki/: TrackServer.hpp  config.hpp  listener_client.hpp  track_server.hpp
include/mmki/keyboard/: keyboard.hpp  keyboard_capture.hpp  keyboard_factory.hpp  keyboard_mac.hpp  keyboard_state.hpp  keyboard_windows.hpp
include/mmki/mouse/: Mouse.hpp  MouseTracker.hpp  mouse_capture.hpp  mouse_factory.hpp  mouse_mac.hpp  mouse_state.hpp  mouse_windows.hpp  windows_mouse.hpp
include/mmki/network/: Multicast.hpp  helper.hpp  multicast_client.hpp  multicast_server.hpp  net.hpp
include/mmki/system/: system.hpp
include/mmki/tools/: serializer.hpp
internal_lib/: MulticastClient.cpp  MulticastClient.h  MulticastServer.h  WIndowsMouseTracker.cpp  client.cpp  client.h  config.hpp  extern.cpp  extern.hpp  internal_lib.hpp  mouse.h  mouseTracker.h  mouse_tracker.cpp  mouse_tracker.h  serializer.cpp  serializer.hpp  server.cpp  server.h  udpMulticastServer.cpp
internal_lib/general/: MouseCapture.cpp  mouse.cpp
internal_lib/keyboard/: KeyboardMac.h  keyboard.cpp  keyboard.hpp  keyboardMac.cpp  keyboardWindows.cpp
internal_lib/mouse/: MacMouseTracker.cpp  Mouse.hpp  MouseCapture.cpp  MouseTracker.hpp  WIndowsMouseTracker.cpp  mouse.cpp
internal_lib/network/: Multicast.hpp  MulticastClient.cpp  NetReceiverBuffer.cpp  helper.cpp  udpMulticastServer.cpp
internal_lib/system/: display.cpp  system.hpp
internal_lib/tools/: cilcularQueue.cpp  datstruct.hpp  serializer.cpp  serializer.hpp
internal_lib/windowsCapture/: mouse_tracker.cpp
playground/: click.cpp  drag.cpp  keyboard.cpp  test.cpp
src/: CMakeLists.txt  client.cpp  extern.cpp  extern.hpp  listener_client.cpp  server.cpp  track_server.cpp
src/keyboard/: CMakeLists.txt  keyboard.cpp  keyboardWindows.cpp  keyboard_capture.cpp  keyboard_factory.cpp  keyboard_mac.cpp  keyboard_state.cpp  keyboard_windows.cpp
src/mouse/: CMakeLists.txt  MouseCapture.cpp  WIndowsMouseTracker.cpp  mouse.cpp  mouse_capture.cpp  mouse_factory.cpp  mouse_mac.cpp  mouse_state.cpp  mouse_windows.cpp  windows_mouse.cpp
src/network/: CMakeLists.txt  MulticastClient.cpp  NetReceiverBuffer.cpp  helper.cpp  multicast_client.cpp  multicast_server.cpp  net.cpp  udpMulticastServer.cpp
src/system/: CMakeLists.txt  display.cpp  system.cpp
src/tools/: CMakeLists.txt  serializer.cpp
